[package]
name = "kderive"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.19"
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master"}
kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master"}
kaspa-wallet-keys = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master"}
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master"}
secp256k1 = "0.29.1"
